[package]
name = "btcmclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1.32.0"
tokio = { version = "1", features = ["full"] }
btcmbase = {version = "0.1.0", path = "../btcmbase" }
btcmtools= {version = "0.1.0", path = "../btcmtools"}
bytes = "1.5.0"
#serde = "1.0.194"
#serde_bytes = "0.11.14"
